<resources>
    <string name="app_name">ChatApp</string>
    <string name="new_to_our_app">New to our app?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="FindWork">FindWork</string>
    <string name="sign_in">Sign In</string>
    <string name="blue_collar_jobs">Blue-collar-jobs</string>
    <string name="Name">Name</string>
    <string name="Number">Phone</string>
    <string name="Gbtl">Go back to login.</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="jobs">Jobs</string>
    <string name="chat">Chat</string>
    <string name="type_a_message">Type a message</string>
    <string name="Conversations">Conversations</string>
    <string name="nothing_yet">Nothing Yet!!</string>
    <string name="akhilesh">Akhilesh</string>
    <string name="accountant">Accountant</string>
    <string name="profile">Chats</string>
    <string name="chats">Chats</string>
    <string name="Jobs">Jobs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>